// Vitest Snapshot v1

exports[`disabled 1`] = `
"<button id=\\"button\\" class=\\"button button-md button-primary\\" disabled=\\"true\\">
  <!--v-if-->
  <div class=\\"button-content\\">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</button>"
`;

exports[`link types 1`] = `
"<a id=\\"button\\" class=\\"button button-md button-primary\\" href=\\"/\\">
  <!--v-if-->
  <div class=\\"button-content\\">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</a>"
`;

exports[`mount component 1`] = `
"<button id=\\"id\\" class=\\"button button-md button-primary\\">
  <!--v-if-->
  <div class=\\"button-content\\">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</button>"
`;

exports[`variant 1`] = `
"<button id=\\"id\\" class=\\"button button-md button-secondary\\">
  <!--v-if-->
  <div class=\\"button-content\\">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</button>"
`;
